# helper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  containers.py  database.py  justfile  main.py  package-lock.json  package.json  pyproject.toml  requirement.md  settings.py
.claude/: CLAUDE.md
.claude/skills/supabase-postgres-best-practices/: AGENTS.md  CLAUDE.md  SKILL.md
.husky/: commit-msg  pre-commit
apps/: cache.py  exceptions.py
apps/auth/: __init__.py
apps/consumers/: voice_stream_consumer.py
apps/controllers/: __init__.py  assistant.py  auth.py  voice.py
apps/i18n/: middleware.py
apps/models/: __init__.py  ai_log.py  base.py  conversation.py  links.py  memory.py  reminder.py  user.py  voice.py
apps/repositories/: ai_log.py  conversation.py  memory.py  voice.py
apps/schemas/: assistant.py  common.py  memory.py  voice.py
apps/services/: assistant.py  auth.py  conversation.py  reminder.py  social.py  voice.py  voice_session.py
apps/types/: assistant.py  auth.py  celery.py  conversation.py  database.py  redis.py  reminder.py  social.py  voice.py
apps/utils/: __init__.py  log.py  reminder_calculator.py
backend/: .gitignore  .pre-commit-config.yaml  README.md  babel.cfg  containers.py  database.py  justfile  main.py  messages.pot  pyproject.toml  requirement.md  settings.py
backend/.claude/: CLAUDE.md
backend/apps/: celery.py  exceptions.py  middlewares.py
backend/apps/auth/: __init__.py
backend/apps/consumers/: __init__.py  voice_stream_consumer.py
backend/apps/controllers/: __init__.py  assistant.py  auth.py  device.py  reminder.py  voice.py
backend/apps/i18n/: __init__.py  middleware.py
backend/apps/models/: __init__.py  device_token.py  links.py  memory.py  reminder.py  user.py  voice.py
backend/apps/repositories/: device_token.py  memory.py  reminder.py  user.py
backend/apps/schemas/: auth.py  common.py  conversation.py  device.py  memory.py  reminder.py  voice.py
backend/apps/services/: assistant.py  auth.py  conversation.py  push.py  reminder.py  session.py  social.py  streaming_voice.py
backend/apps/tasks/: reminder.py
backend/apps/types/: ai_log.py  assistant.py  auth.py  firebase.py  redis.py  social.py
backend/apps/utils/: datetime_utils.py  reminder_calculator.py
backend/compose/: compose-local.yaml
backend/migrations/: env.py
backend/migrations/versions/: 01ef7eec7bf0_change_next_run_at_to_timezone_aware.py  34dfcde74e2d_add_cascade_delete_to_foreign_keys.py  (+2 more)
backend/scripts/: create_test_user.py
backend/static/: voice-input.html
docs/: voice-streaming-implementation.md
flutter/: README.md  firebase.json  justfile  pubspec.yaml
flutter/.claude/: CLAUDE.md
flutter/ios/: Podfile
frontend/: app.json  package-lock.json  package.json
frontend/.claude/: CLAUDE.md
frontend/app/: _layout.tsx  memory-detail.tsx  record-modal.tsx  settings.tsx
frontend/components/: back-button.tsx  google-login-button.tsx  oauth-webview-modal.tsx  screen-header.tsx  themed-text.tsx  themed-view.tsx  user-info-card.tsx
frontend/constants/: config.ts  theme.ts
frontend/contexts/: auth-context.tsx  theme-context.tsx
frontend/hooks/: use-google-login.ts
jupyter/chain/: stock.ipynb
jupyter/grahp/: stock.ipynb
migrations/: env.py
migrations/versions/: 4ca3268abf85_add_voicesession_and_conversation_models.py  5b8594d0d4bb_enable_pgvector_extension.py  79063dcd634a_add_user_table.py  8383367117e9_helper_table_setup.py  84390268f67c_add_memory_table.py  8ddf13406a13_helper_table_setup.py  ca761d738bd8_add_user_table.py  f0f254b9d37b_add_ai_processing_log_table.py
static/: voice-input.html
static/css/: voice-input.css
static/js/: voice-input.js
(+48 files in other folders)
