[project]
name = "helper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "babel>=2.17.0",
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-extra-types>=2.11.0",
    "python-ulid>=3.1.0",
    "redis[hiredis]>=7.1.0",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = [
    "migrations/",
    "main.py"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "settings"
disable_error_code = ["call-arg"]

[tool.ruff]
exclude = ["migrations/"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["F403", "F405"]
