[project]
name = "helper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "alembic-postgresql-enum>=1.8.0",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "babel>=2.17.0",
    "celery[redis]>=5.3.1",
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.128.0",
    "flower>=2.0.1",
    "google-cloud-speech>=2.28.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain-google-genai>=4.2.0",
    "pgvector>=0.4.2",
    "pydantic-extra-types>=2.11.0",
    "python-ulid>=3.1.0",
    "redis[hiredis]>=7.1.0",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = [
    "migrations/",
    "main.py"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "settings"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "apps.cache"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "apps.services.streaming_voice"
disable_error_code = ["no-untyped-call", "no-any-return"]

[tool.ruff]
exclude = ["migrations/"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# 기본 규칙: pycodestyle errors (E), Pyflakes (F), isort (I), pyupgrade (UP), future-annotations (FA)
select = ["E", "F", "I", "UP", "FA"]
# E402는 자동 수정되도록 설정
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Import 정렬 설정
known-first-party = ["apps", "settings", "containers"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers"]
markers = [
    "asyncio: marks tests as async",
    "real_api: marks tests that call real external APIs (Gemini)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
